improuvment in the node leds

--- a/UserWebGUI/html/DqmGUI.html
+++ b/UserWebGUI/html/DqmGUI.html
@@ -120,6 +120,7 @@
 						<i class="fa fa-caret-down"></i>
 					</button>
 					<div class="dropdown-container">
+						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DqmPages/StopLightsTable.html')"><i class="fa fa-fw fa-home"></i> Ecal main</button>
 						<a href="#">Link 13</a>
 						<a href="#">Link 14</a>
 						<a href="#">Link 15</a>
