--- a/UserWebGUI/html/DqmPages/DqmHome.html
+++ b/UserWebGUI/html/DqmPages/DqmHome.html
@@ -103,187 +103,6 @@
 			}
 
 			var pvToUse_1 = [
-				 {"Mu2e:RackProt:1E:state": 0}
-				,{"Mu2e:RackProt:1W:state": 0}
-				// ,{"Mu2e:RackProt:2E:state": 0}
-				// ,{"Mu2e:RackProt:2W:state": 0}
-				// ,{"Mu2e:RackProt:3E:state": 0}
-				// ,{"Mu2e:RackProt:3W:state": 0}
-				// ,{"Mu2e:RackProt:4E:state": 0}
-				// ,{"Mu2e:RackProt:4W:state": 0}
-				// ,{"Mu2e:RackProt:5E:state": 0}
-				// ,{"Mu2e:RackProt:5W:state": 0}
-				// ,{"Mu2e:RackProt:6E:state": 0}
-				// ,{"Mu2e:RackProt:6W:state": 0}
-				// ,{"Mu2e:RackProt:7E:state": 0}
-				// ,{"Mu2e:RackProt:7W:state": 0}
-				,{"Mu2e:RackTemp:1E:0:T_hyst": 0}
-				,{"Mu2e:RackTemp:1E:0:T_trip": 0}
-				,{"Mu2e:RackTemp:1E:0:configbyte": 0}
-				,{"Mu2e:RackTemp:1E:0:temperature": 0}
-				,{"Mu2e:RackTemp:1E:1:T_hyst": 0}
-				,{"Mu2e:RackTemp:1E:1:T_trip": 0}
-				,{"Mu2e:RackTemp:1E:1:configbyte": 0}
-				,{"Mu2e:RackTemp:1E:1:temperature": 0}
-				,{"Mu2e:RackTemp:1E:2:T_hyst": 0}
-				,{"Mu2e:RackTemp:1E:2:T_trip": 0}
-				,{"Mu2e:RackTemp:1E:2:configbyte": 0}
-				,{"Mu2e:RackTemp:1E:2:temperature": 0}
-				,{"Mu2e:RackTemp:1W:0:T_hyst": 0}
-				,{"Mu2e:RackTemp:1W:0:T_trip": 0}
-				,{"Mu2e:RackTemp:1W:0:configbyte": 0}
-				,{"Mu2e:RackTemp:1W:0:temperature": 0}
-				,{"Mu2e:RackTemp:1W:1:T_hyst": 0}
-				,{"Mu2e:RackTemp:1W:1:T_trip": 0}
-				,{"Mu2e:RackTemp:1W:1:configbyte": 0}
-				,{"Mu2e:RackTemp:1W:1:temperature": 0}
-				,{"Mu2e:RackTemp:1W:2:T_hyst": 0}
-				,{"Mu2e:RackTemp:1W:2:T_trip": 0}
-				,{"Mu2e:RackTemp:1W:2:configbyte": 0}
-				,{"Mu2e:RackTemp:1W:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:2E:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:2E:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:2E:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:2E:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:2E:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:2E:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:2E:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:2E:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:2E:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:2E:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:2E:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:2E:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:2W:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:2W:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:2W:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:2W:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:2W:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:2W:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:2W:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:2W:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:2W:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:2W:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:2W:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:2W:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:3E:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:3E:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:3E:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:3E:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:3E:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:3E:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:3E:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:3E:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:3E:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:3E:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:3E:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:3E:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:3W:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:3W:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:3W:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:3W:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:3W:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:3W:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:3W:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:3W:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:3W:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:3W:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:3W:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:3W:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:4E:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:4E:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:4E:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:4E:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:4E:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:4E:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:4E:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:4E:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:4E:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:4E:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:4E:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:4E:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:4W:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:4W:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:4W:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:4W:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:4W:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:4W:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:4W:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:4W:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:4W:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:4W:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:4W:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:4W:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:5E:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:5E:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:5E:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:5E:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:5E:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:5E:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:5E:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:5E:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:5E:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:5E:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:5E:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:5E:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:5W:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:5W:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:5W:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:5W:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:5W:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:5W:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:5W:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:5W:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:5W:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:5W:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:5W:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:5W:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:6E:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:6E:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:6E:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:6E:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:6E:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:6E:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:6E:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:6E:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:6E:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:6E:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:6E:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:6E:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:6W:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:6W:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:6W:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:6W:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:6W:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:6W:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:6W:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:6W:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:6W:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:6W:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:6W:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:6W:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:7E:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:7E:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:7E:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:7E:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:7E:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:7E:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:7E:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:7E:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:7E:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:7E:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:7E:2:temperature": 0}
-				// ,{"Mu2e:RackTemp:7W:0:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:7W:0:T_trip": 0}
-				// ,{"Mu2e:RackTemp:7W:0:configbyte": 0}
-				// ,{"Mu2e:RackTemp:7W:0:temperature": 0}
-				// ,{"Mu2e:RackTemp:7W:1:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:7W:1:T_trip": 0}
-				// ,{"Mu2e:RackTemp:7W:1:configbyte": 0}
-				// ,{"Mu2e:RackTemp:7W:1:temperature": 0}
-				// ,{"Mu2e:RackTemp:7W:2:T_hyst": 0}
-				// ,{"Mu2e:RackTemp:7W:2:T_trip": 0}
-				// ,{"Mu2e:RackTemp:7W:2:configbyte": 0}
-				// ,{"Mu2e:RackTemp:7W:2:temperature": 0}
 				];
 
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -321,153 +140,19 @@
 				UID_ = 0;
 
 				window.clearTimeout(timerVariable_);
-				//window.clearTimeout(lastAlarmsTimerVariable_);
-				//window.clearTimeout(alarmsLogTimerVariable_);
 
-				makeMainPage();
-				generateUID();
-				pollServer();
-				//timerVariable_ = window.setTimeout(pollServer, refreshRate_);
-				//getLastAlarms();
-				//lastAlarmsTimerVariable_ = window.setTimeout(pollLastAlarms, refreshRate_);
-				//getAlarmsLog();
-				//alarmsLogTimerVariable_ = window.setTimeout(pollAlarmsLog, refreshRate_);
+				//makeMainPage();
+				//generateUID();
+				//pollServer();
 			} //end init()
-
-
-
-
-			var pvToUse_;
-			async function requestApi(url) {
-				const response = await fetch(url);
-				const json = await response.json();
-				console.log(json); //This prints the objects I need and gets called second
-				globalThis.pvToUse_ = json;
-				return json;
-			}
-
-			//=====================================================================================
-			//get set of PVs to show
-			function getPvSet()
-			{
-				//requestApi('/WebPath/JSONFiles/pvToUse_home.json');
-				// fetch('/WebPath/JSONFiles/pvToUse_home.json')
-				// .then(function (response) {
-				// 	return response.json();
-				// })
-				// .then(function (data) {
-				// 	getData(data);
-				// })
-				// .catch(function (err) {
-				// 	console.log(err);
-				// });
-				pvToUse_ = pvToUse_1;
-			}  //end getPvSet()
 
 
 			//=====================================================================================
 			//Make main page here
 			function makeMainPage()
 			{
-				getPvSet();
-				var table = document.getElementById("rackTable");
 
-				for (i = 0; i < Object.keys(pvToUse_).length; i++)
-				{
-					var row = table.insertRow(i);
-					var cell1 = row.insertCell(0);
-					cell1.id = "pvName-"+i;
-					cell1.innerHTML = Object.keys(pvToUse_[i])[0];
-					var cell2 = row.insertCell(1);
-					cell2.id = "pvValue-"+i;
-					var widgetObject 		= {};
-					widgetObject.pvList 	= pvToUse_[i];
-					widgetObject.pvSettings = {};
-					widgetObject.el = cell2;
-					page_.widgets[i] = widgetObject;
-					setupPvParams(i);
-				}
-				var header = table.insertRow(0);
-				var headerCell1 = document.createElement("TH");
-            	headerCell1.innerHTML = "Parameter";
-				var headerCell2 = document.createElement("TH");
-            	headerCell2.innerHTML = "Status";
-            	header.appendChild(headerCell1);
-            	header.appendChild(headerCell2);
 			} //end makeMainPage()
-
-
-			var actualGraphId_;
-			var lastPlotTime_ = 0;
-			var plotTimeData_ = {};
-			var plotValueData_ = {};
-			var plotPvList_ = {};
-			var plotParameters_ = {class: "", "show_labels": "false", "background_color": "transparent", "trace_type": "scatter", "trace_mode": "lines"};
-			//=====================================================================================
-			function drawGraph(widget)
-			{
-				var plot = document.getElementById('plot');
-				var i = 0;
-				plotPvList_ = {};
-
-				for (pv in page_.widgets[widget].pvList)
-				{
-					plotTimeData_[pv] = [];
-					plotValueData_[pv] = [];
-					plotPvList_[pv] = i;
-					i++;
-				}
-
-				makeGraph();
-				var actualTime = Math.floor(Date.now())/1000;
-				var startTime = actualTime - 6*3600;
-				getPvHistory(widget, plotParameters_, startTime, actualTime);
-				actualGraphId_ = widget;
-			} //end drawGraph()
-
-
-			//=====================================================================================
-			function makeGraph()
-			{
-				var plot = document.getElementById("plot");
-				var plotColor = "black";
-
-				var traces = [];
-				for (pv in plotPvList_)
-				{
-					traces.push({ y: [],  type: plotParameters_["trace_type"], mode: plotParameters_["trace_mode"], visible: true });
-				}
-
-				Plotly.newPlot(plot.id
-			    , traces
-			    , {
-					  xaxis: { title: 'time', 'titlefont': { size: 10 }, showticklabels: true },
-					  yaxis: { title: 'amplitude', titlefont: { size: 10 }, zeroline: true }
-					, margin: { l:45, r: 10, b: 70, t: 20 }
-					
-					//, showlegend: true
-					, legend: {
-								  x: 0
-							//  , y: -150
-							  	, "orientation": "h"
-								, font: {
-     								family: 'sans-serif'
-      							  , size: 8
- 							      , color: '#000'
-    							}
-								, bgcolor: 'rgba(0,0,0,0)'
-							 }
-					, plot_bgcolor: plotParameters_["background_color"]
-					, paper_bgcolor: plotParameters_["background_color"]
-	    		}, {responsive: true});
-
-	    		Plotly.relayout(plot, {
-								  width: plot.innerWidth
-								, height: plot.innerHeight }
-							   );
-				
-				console.log("newGraph() reached");
-			} //end makeGraph()
 
 
 			//=====================================================================================
@@ -607,93 +292,7 @@
 			{
 				console.log("Text newValue() reached", pvName, pvValue);
 
-				var units = page_.widgets[widget].pvSettings != undefined ? page_.widgets[widget].pvSettings[pvName].Units : "";
-				page_.widgets[widget].el.innerHTML = "<button class='pvButton' onclick='drawGraph(" + widget + ")'>" + pvValue + " " + units + "</button>";
-
-				page_.widgets[widget].el.title = setWidgetToolTip(pvName, pvValue, pvTime, pvStatus, pvSeverity, page_.widgets[widget].pvSettings);
-
-				setWidgetPvInfo(
-								  widget
-								, pvName
-								, pvValue
-								, pvTime
-								, pvStatus
-								, pvSeverity
-								, true
-								, "DimGray"
-								, "LightGray"
-								, "4px solid green"
-								);
-
-				if(widget==actualGraphId_ && pvTime>lastPlotTime_)
-				{
-					lastPlotTime_ = pvTime;
-					drawNewGraphValue(widget, pvName, pvValue, pvTime, pvStatus, pvSeverity);
-				}
 			} //end drawNewValue()
-
-
-			//=====================================================================================
-			//plot a new value of a PV
-			function drawNewGraphValue(widget, pvName, pvValue, pvTime, pvStatus, pvSeverity)
-			{
-				var date = new Date(pvTime*1000);
-				if (plotTimeData_[pvName] !== undefined && plotTimeData_[pvName].length)
-					if ((date <= plotTimeData_[pvName][plotTimeData_.length-1]))
-					{
-						console.log("chart drawNewGraphValue(): return"); return;
-					}
-
-				if (plotTimeData_[pvName] !== undefined) plotTimeData_[pvName].push(date);
-				if (plotValueData_[pvName] !== undefined) plotValueData_[pvName].push(pvValue);
-
-				console.log("Strip Chart newValue() reached", pvName, pvValue);
-				console.log(plotTimeData_);
-				console.log(plotValueData_);				
-				var plot = document.getElementById("plot");
-				var plotColor = "black";
-				if(pvSeverity == "MAJOR" )
-					plotColor = "red";
-				else if(pvSeverity == "MINOR")
-					plotColor = "orange";
-				else if(pvSeverity == "INVALID")
-					plotColor = "darkgrey";
-				else
-					plotColor = "green";
-
-				if (Object.getOwnPropertyNames(plotPvList_).length == 1)
-				Plotly.relayout(plot, {
-	    			  width: plot.innerWidth
-		    		, height: plot.innerHeight
-					, title: pvName + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
-					, titlefont: { size: 12, color: plotColor }
-				});
-
-				var ntraces = [];
-				var traces = [];
-				var i = 0;
-
-				for (pv in plotPvList_)
-				{
-					ntraces.push(i);
-
-					var xval = [];
-					var yval = [];
-					if (plotTimeData_[pv] !== undefined && plotValueData_[pv] !== undefined)
-					{
-						var xval = plotTimeData_[pv];
-						var yval = plotValueData_[pv];
-					}
-					var trace = { x: xval, y: yval, type: plotParameters_["trace_type"], mode: plotParameters_["trace_mode"], name: pv, visible: (plot.data[i].visible == true) ? true : 'legendonly'};
-					traces.push(trace);
-					//Plotly.deleteTraces(plot, i);
-					i++;
-				}
-				if (ntraces.length) Plotly.deleteTraces(plot, ntraces);
-				if (traces.length) Plotly.addTraces(plot, traces);
-				//Plotly.extendTraces(plot, { x: plotData[pvName].time, y: plotData[pvName+1].value }, [PVList[pvName]]);
-				console.log("drawNewGraphValue() reached, pv: " + pvName);
-			} //end drawNewGraphValue()
 
 
 			//=====================================================================================
@@ -998,12 +597,16 @@
 	<body onload='//init() called by DesktopContent.js'>
 		
 		<div id="mainBlockContainer" height="auto" width="auto">
-			<h2 align="center">Example Page</h2>
-			<div class="tableContainer" id="table" >
-				<table id="rackTable" align="left" border="1px">
-				</table>
-			</div> <!-- end table block -->
-			<div class="plotContainer" id="plot"></div>
+			<h2 align="center">Online monitoring Home Page</h2>
+			<div class="subSystemContainer">BEAM INFO</div>
+			<div class="subSystemContainer">MAGNETIC FIELD</div>
+			<div class="subSystemContainer">TRIGGER</div>
+			<div class="subSystemContainer">DAQ</div>
+			<div class="subSystemContainer">STM</div>
+			<div class="subSystemContainer">EXTMON</div>
+			<div class="subSystemContainer">TRACKER</div>
+			<div class="subSystemContainer">CALORIMETER</div>
+			<div class="subSystemContainer">CRV</div>
 		</div> <!-- end main block container -->
 	</body>
 </html>
