added a new color for stale PVs in the DaqRoomHealth page

--- a/UserWebGUI/html/DCSMonitoringPages/DaqRoomHealth.html
+++ b/UserWebGUI/html/DCSMonitoringPages/DaqRoomHealth.html
@@ -750,7 +750,7 @@
 								, pvTime
 								, pvStatus
 								, pvSeverity
-								, false
+								, true
 								, false
 								, "DimGray"
 								, "gray"
@@ -947,7 +947,8 @@
 				<div style="background-color: green">No alarm</div>
 				<div style="background-color: orange">Warning</div>
 				<div style="background-color: red">Alarm</div>
-				<div style="background-color: gray">Undefined state</div>
+				<div style="background-color: gray">Stale</div>
+				<div style="background-color: darkslategray">Undefined state</div>
 				<div style="align:right">
 					<h2 align="center">DAQ room health</h2>
 				</div>
