DCSMonitoring.html link updates

--- a/UserWebGUI/html/DCSMonitoring.html
+++ b/UserWebGUI/html/DCSMonitoring.html
@@ -88,6 +88,7 @@
 					</button>
 					<div class="dropdown-container">
 						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/DaqRoomHealth.html')"><i class="fa fa-fw fa-thermometer"></i> Daq room health</button>
+						<button class="open-page-btn" onmousedown="openPage('http://localhost:3000/goto/OrSS_3ISg?orgId=1')"><i class="fa fa-fw fa-thermometer"></i> Graphite</button>
 					</div>
 					<button class="dropdown-btn">DCS
 						<i class="fa fa-caret-down"></i>
