added virtaul funciotn getStructureStatusAsJSON into DTCInterfaceTable

--- a/UserWebGUI/html/DCSMonitoring.html
+++ b/UserWebGUI/html/DCSMonitoring.html
@@ -87,7 +87,8 @@
 						<i class="fa fa-caret-down"></i>
 					</button>
 					<div class="dropdown-container">
-						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/DaqRoomHealth.html')"><i class="fa fa-fw fa-thermometer"></i> Daq room health</button>
+						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/daq/DaqRoomHealth.html')"><i class="fa fa-fw fa-thermometer"></i> DAQ room health</button>
+						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/daq/IERCDaqRoomHealth.html')"><i class="fa fa-fw fa-thermometer"></i> IERC test-stand room health</button>
 						<button class="open-page-btn" onmousedown="openPage('http://localhost:3000/goto/OrSS_3ISg?orgId=1')"><i class="fa fa-fw fa-thermometer"></i> Graphite</button>
 					</div>
 					<button class="dropdown-btn">DCS
@@ -113,7 +114,7 @@
 						<i class="fa fa-caret-down"></i>
 					</button>
 					<div class="dropdown-container">
-						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/StopLightsTable.html')"><i class="fa fa-fw fa-home"></i> Ecal main</button>
+						<button class="open-page-btn" onmousedown="openPage('/WebPath/UserWebPath/html/DCSMonitoringPages/calorimeter/CaloMain.html')"><i class="fa fa-fw fa-home"></i> Ecal main</button>
 					</div>
 					<button class="dropdown-btn">TRK
 						<i class="fa fa-caret-down"></i>
