--- a/UserWebGUI/html/DCSMonitoringPages/StopLightsTable.html
+++ b/UserWebGUI/html/DCSMonitoringPages/StopLightsTable.html
@@ -169,6 +169,7 @@
 				//	take last found, which must always be correct
 				//	because last fields are forced fields (author/time) and 
 				//	do not have special characters.
+				tableUploaded2Str_ = csvFile;
 
 				for (var row = tableUploaded2Str_.length-1;row >= 0; --row) 
 				{
